faq: update macOS Java info
It is not helpful these days to talk about Apple Java, because
almost no one has a Mac with old-enough OS to even run it anymore.